output/balancer_p5_25_124/foundry_validation/F-001_Emergency_exits_permanently_invalidate_L/forge_stdout_attempt2.log
Compiler run failed:
Warning (2519): This declaration shadows an existing declaration.
   --> src/FlawVerifier.sol:646:13:
    |
646 |             uint256 fees = _mulDown(lowerTarget - realMain, fee);
    |             ^^^^^^^^^^^^
Note: The shadowed declaration is here:
   --> src/FlawVerifier.sol:654:9:
    |
654 |         uint256 fees = _mulDown(realMain - upperTarget, fee);
    |         ^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xA13a9247ea42D743238089903570127DdA72fE44". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xA13a9247ea42D743238089903570127DdA72fE44". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:91:47:
   |
91 |     address private constant BOOSTED_PARENT = 0xA13A9247ea42D743238089903570127DdA72fE44;
   |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

